--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,3 +1,27 @@
-div {
-    border: 25px solid black;
-}
+
+button {
+    
+    background-color: #5879C7 ; 
+    border: none;
+    color: #425BA7 ;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+  .navbar {
+      display: flex;
+      justify-content: start;
+     background-color: #759EDA ;
+      padding: 30px;
+      
+  }
+  .search{
+      border: none;
+      color: white;
+      background-color: #86aeeb;
+      background: none;
+      outline: none
+      
+  }
