--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,32 @@
+@font-face {
+  font-family: "Raleway-Regular";
+  src: url("./fonts/Raleway-Regular.eot"); /* IE9 Compat Modes */
+  src: url("./fonts/Raleway-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("./fonts/Raleway-Regular.otf") format("opentype"), /* Open Type Font */
+    url("./fonts/Raleway-Regular.svg") format("svg"), /* Legacy iOS */
+    url("./fonts/Raleway-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("./fonts/Raleway-Regular.woff") format("woff"), /* Modern Browsers */
+    url("./fonts/Raleway-Regular.woff2") format("woff2"); /* Modern Browsers */
+  font-weight: normal;
+  font-style: normal;
+}
+
 .app {
-  height: 100vh;
-  width: 100vw;
+  max-height: 100vh;
+  max-width: 100vw;
   transition: background-color 1s ease-in;
+  font-family: "Raleway-Regular", sans-serif;
 }
 
 .app__header,
 .app__main {
   width: 100%;
+    height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  font-family: "Raleway", sans-serif;
+ 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -21,5 +36,32 @@
 /* Current weather */
 
 div {
-  border: 5px solid red;
+ background-color: lightblue;
+}
+.WeatherFirst{
+  display: flex;
+
+
+}
+.Weathernext{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+
+
+}
+.Flexcontainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.Fcontainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.maincontainer {
+  height: 600px;
+  width: 100%
 }
